Bluetooth_module/Bluetooth_1.0/build/log/idf_py_stdout_output_31680
[1/9] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\Espressif\frameworks\esp-idf-v5.4\Project_Code\Bluetooth_module\Bluetooth_1.0\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.4_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.4/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Espressif/frameworks/esp-idf-v5.4/Project_Code/Bluetooth_module/Bluetooth_1.0/build/bootloader/bootloader.bin"
Bootloader binary size 0x5210 bytes. 0x2df0 bytes (36%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/Bluetooth_1.0.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/Bluetooth_1.0.c.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.4\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Espressif/frameworks/esp-idf-v5.4/Project_Code/Bluetooth_module/Bluetooth_1.0/build/config -IC:/Espressif/frameworks/esp-idf-v5.4/Project_Code/Bluetooth_module/Bluetooth_1.0/main -IC:/Espressif/frameworks/esp-idf-v5.4/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.4/components/freertos/config/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/freertos/config/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.4/components/freertos/config/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.4/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_hw_support/include/soc/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_hw_support/dma/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_hw_support/ldo/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_hw_support/debug_probe/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_hw_support/port/esp32s3/. -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_hw_support/port/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/heap/tlsf -IC:/Espressif/frameworks/esp-idf-v5.4/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/soc/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.4/components/soc/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/soc/esp32s3/register -IC:/Espressif/frameworks/esp-idf-v5.4/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/hal/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_rom/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_rom/esp32s3/include/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_rom/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.4/components/xtensa/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/xtensa/deprecated_include -IC:/Espressif/frameworks/esp-idf-v5.4/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.4/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.4/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/lwip/port/esp32xx/include/arch -IC:/Espressif/frameworks/esp-idf-v5.4/components/lwip/port/esp32xx/include/sys -IC:/Espressif/frameworks/esp-idf-v5.4/components/bt/include/esp32c3/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/bt/common/osi/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/bt/common/api/include/api -IC:/Espressif/frameworks/esp-idf-v5.4/components/bt/common/btc/profile/esp/blufi/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/bt/common/btc/profile/esp/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/bt/common/hci_log/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/bt/host/bluedroid/api/include/api -IC:/Espressif/frameworks/esp-idf-v5.4/components/bt/porting/ext/tinycrypt/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_timer/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_wifi/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_wifi/include/local -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_wifi/wifi_apps/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_wifi/wifi_apps/nan_app/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_event/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_phy/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_phy/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_netif/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/nvs_flash/include -IC:/Espressif/frameworks/esp-idf-v5.4/components/esp_partition/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.4/Project_Code/Bluetooth_module/Bluetooth_1.0=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.4=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/Bluetooth_1.0.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\Bluetooth_1.0.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/Bluetooth_1.0.c.obj -c C:/Espressif/frameworks/esp-idf-v5.4/Project_Code/Bluetooth_module/Bluetooth_1.0/main/Bluetooth_1.0.c
C:/Espressif/frameworks/esp-idf-v5.4/Project_Code/Bluetooth_module/Bluetooth_1.0/main/Bluetooth_1.0.c: In function 'gatts_profile_a_event_handler':
C:/Espressif/frameworks/esp-idf-v5.4/Project_Code/Bluetooth_module/Bluetooth_1.0/main/Bluetooth_1.0.c:127:65: error: 'PROFILE_B_APP_ID' undeclared (first use in this function); did you mean 'PROFILE_A_APP_ID'?
  127 |          esp_ble_gatts_create_service(gatts_if, &gl_profile_tab[PROFILE_B_APP_ID].service_id, GATTS_NUM_HANDLE_TEST_B);
      |                                                                 ^~~~~~~~~~~~~~~~
      |                                                                 PROFILE_A_APP_ID
C:/Espressif/frameworks/esp-idf-v5.4/Project_Code/Bluetooth_module/Bluetooth_1.0/main/Bluetooth_1.0.c:127:65: note: each undeclared identifier is reported only once for each function it appears in
C:/Espressif/frameworks/esp-idf-v5.4/Project_Code/Bluetooth_module/Bluetooth_1.0/main/Bluetooth_1.0.c:127:95: error: 'GATTS_NUM_HANDLE_TEST_B' undeclared (first use in this function); did you mean 'GATTS_NUM_HANDLE_TEST_A'?
  127 |          esp_ble_gatts_create_service(gatts_if, &gl_profile_tab[PROFILE_B_APP_ID].service_id, GATTS_NUM_HANDLE_TEST_B);
      |                                                                                               ^~~~~~~~~~~~~~~~~~~~~~~
      |                                                                                               GATTS_NUM_HANDLE_TEST_A
C:/Espressif/frameworks/esp-idf-v5.4/Project_Code/Bluetooth_module/Bluetooth_1.0/main/Bluetooth_1.0.c:162:67: error: 'GATTS_CHAR_UUID_TEST_A' undeclared (first use in this function); did you mean 'GATTS_SERVICE_UUID_TEST_A'?
  162 |          gl_profile_tab[PROFILE_A_APP_ID].char_uuid.uuid.uuid16 = GATTS_CHAR_UUID_TEST_A;
      |                                                                   ^~~~~~~~~~~~~~~~~~~~~~
      |                                                                   GATTS_SERVICE_UUID_TEST_A
C:/Espressif/frameworks/esp-idf-v5.4/Project_Code/Bluetooth_module/Bluetooth_1.0/main/Bluetooth_1.0.c:165:10: error: 'a_property' undeclared (first use in this function)
  165 |          a_property = ESP_GATT_CHAR_PROP_BIT_READ | ESP_GATT_CHAR_PROP_BIT_WRITE | ESP_GATT_CHAR_PROP_BIT_NOTIFY;
      |          ^~~~~~~~~~
ninja: build stopped: subcommand failed.
